--- a/rootdir/etc/init.mt6893.power.rc
+++ b/rootdir/etc/init.mt6893.power.rc
@@ -1,17 +1,12 @@
-on property:init.svc.vendor.charger=running
-    # Enable UFS powersaving
-    write /sys/devices/platform/bootdevice/clkgate_enable 1
-
-    # Keep one LITTLE and one big
-    write /sys/devices/system/cpu/cpu1/online 0
-    write /sys/devices/system/cpu/cpu2/online 0
-    write /sys/devices/system/cpu/cpu3/online 0
-    write /sys/devices/system/cpu/cpu4/online 0
-    write /sys/devices/system/cpu/cpu5/online 0
-    write /sys/devices/system/cpu/cpu7/online 0
+on post-fs
+    # boot perf. tune
+    write /proc/perfmgr/boost_ctrl/eas_ctrl/boot_boost "0 100"
+    write /proc/perfmgr/boost_ctrl/eas_ctrl/boot_boost "1 100"
+    write /proc/perfmgr/boost_ctrl/eas_ctrl/boot_boost "2 100"
+    write /proc/perfmgr/boost_ctrl/eas_ctrl/boot_boost "3 100"
 
 on init
-    # Create energy-aware scheduler tuning nodes
+ # Create energy-aware scheduler tuning nodes
     mkdir /dev/stune/foreground
     mkdir /dev/stune/background
     mkdir /dev/stune/top-app
@@ -23,12 +18,9 @@ on init
     chown system system /dev/stune/rt
     chown system system /dev/stune/tasks
     chown system system /dev/stune/foreground/tasks
-    chown system system /dev/stune/foreground/schedtune.prefer_idle
     chown system system /dev/stune/background/tasks
     chown system system /dev/stune/top-app/tasks
-    chown system system /dev/stune/top-app/schedtune.prefer_idle
     chown system system /dev/stune/rt/tasks
-    chown system system /dev/stune/rt/schedtune.prefer_idle
     chmod 0664 /dev/stune/tasks
     chmod 0664 /dev/stune/foreground/tasks
     chmod 0664 /dev/stune/background/tasks
@@ -41,11 +33,11 @@ on init
 
     # create an stune group for camera-specific processes
     mkdir /dev/stune/camera-daemon
+    write /dev/stune/camera-daemon/schedtune.prefer_idle 0
+    write /dev/stune/camera-daemon/schedtune.boost 0
     chown system system /dev/stune/camera-daemon
     chown system system /dev/stune/camera-daemon/tasks
     chmod 0664 /dev/stune/camera-daemon/tasks
-    write /dev/stune/camera-daemon/schedtune.prefer_idle 0
-    write /dev/stune/camera-daemon/schedtune.boost 0
 
     # create io boost group
     mkdir /dev/stune/io
@@ -53,53 +45,22 @@ on init
     chown system system /dev/stune/io/tasks
     chmod 0666 /dev/stune/io/tasks
 
-    # Disable UFS powersaving
-    write /sys/devices/platform/bootdevice/clkgate_enable 0
-
-    # Configure governor settings for little cluster
-    write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor "schedutil"
-    write /sys/devices/system/cpu/cpufreq/policy0/schedutil/up_rate_limit_us 500
-    write /sys/devices/system/cpu/cpufreq/policy0/schedutil/down_rate_limit_us 20000
-
-    # Configure governor settings for big cluster
-    write /sys/devices/system/cpu/cpufreq/policy7/scaling_governor "schedutil"
-    write /sys/devices/system/cpu/cpufreq/policy7/schedutil/up_rate_limit_us 500
-    write /sys/devices/system/cpu/cpufreq/policy7/schedutil/down_rate_limit_us 20000
-
-    # update cpus for cpuset cgroup
-    write /dev/cpuset/foreground/cpus 0-7
-    write /dev/cpuset/foreground/boost/cpus 0-7
-    write /dev/cpuset/background/cpus 0-3
-    write /dev/cpuset/system-background/cpus 0-5
-    write /dev/cpuset/top-app/cpus 0-7
-
 on property:sys.boot_completed=1
-    # Set-up EAS (Energy Aware Scheduler) environment
-    write /sys/devices/system/cpu/eas/enable 1
+    write /sys/devices/system/cpu/eas/enable 2
+    write /proc/cpufreq/cpufreq_sched_disable 0
 
-    # Set default SchedTune values
+    chown system system /dev/stune/foreground/schedtune.prefer_idle
+    chown system system /dev/stune/top-app/schedtune.prefer_idle
+    chown system system /dev/stune/rt/schedtune.prefer_idle
     write /dev/stune/foreground/schedtune.prefer_idle 0
     write /dev/stune/top-app/schedtune.prefer_idle 0
     write /dev/stune/rt/schedtune.prefer_idle 0
-    write /dev/stune/top-app/schedtune.boost 100
-
-on enable-low-power
-    # Back to default VM settings
-    write /proc/sys/vm/dirty_expire_centisecs 3000
-    write /proc/sys/vm/dirty_background_ratio 10
-
-    # Setup runtime cpusets
-    write /dev/cpuset/top-app/cpus 0-7
-    write /dev/cpuset/foreground/cpus 0-5,7
-    write /dev/cpuset/background/cpus 4-5
-    write /dev/cpuset/system-background/cpus 2-5
-    write /dev/cpuset/restricted/cpus 2-5
-
-    # Enable UFS powersaving
-    write /sys/devices/platform/bootdevice/clkgate_enable 1
-
-    write /proc/cpufreq/cpufreq_sched_disable 0
+    write /dev/stune/top-app/schedtune.boost 1
     write /proc/sys/kernel/sched_migration_cost_ns 200000
+    write /proc/perfmgr/boost_ctrl/eas_ctrl/sched_big_task_rotation 1
 
-on property:sys.boot_completed=1
-    trigger enable-low-power
+    # restore perf. parameters
+    write /proc/perfmgr/boost_ctrl/eas_ctrl/boot_boost "0 0"
+    write /proc/perfmgr/boost_ctrl/eas_ctrl/boot_boost "1 0"
+    write /proc/perfmgr/boost_ctrl/eas_ctrl/boot_boost "2 0"
+    write /proc/perfmgr/boost_ctrl/eas_ctrl/boot_boost "3 0"
