--- a/rootdir/etc/init.mt6893.rc
+++ b/rootdir/etc/init.mt6893.rc
@@ -8,7 +8,7 @@ import /vendor/etc/init/hw/init.modem.rc
 
 on early-init
     # load vendor-modules
-    exec_background u:r:vendor_modprobe:s0 -- /vendor/bin/modprobe -a -d /vendor/lib/modules/ fts_touch_spi xiaomi_touch fpsgo wlan_drv_gen4m wmt_chrdev_wifi gps_drv bt_drv_6893 conninfra connfem
+    exec_background u:r:vendor_modprobe:s0 -- /vendor/bin/modprobe -a -d /vendor/lib/modules/ fts_touch_spi xiaomi_touch fpsgo
 
     write /proc/bootprof "INIT:early-init"
     # boot perf. tune
